# docudb

./: .editorconfig  .gitignore  .hdoc.toml  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Doxyfile  README.md  enums.html  f1EBA790FB1A69788.html  f28F7C497DDCB4ADC.html  f45CD127E79DDCD95.html  f5A3B76F4AC71854D.html  f6D33F08EC46C55EE.html  f733403F7F08921B6.html  f8507125B88E813D6.html  f8AEED985E6F89A21.html  f8E15DCE299D852A0.html  fA453F36B5CAB1F08.html  fAEA55875F51CF420.html  fC4A5B393E2696C62.html  fD24CDC6EB95EF484.html  fE6DCC2523B7C525C.html  fE7D83EE65FA2522F.html  fFDF0271A5D77129C.html  functions.html  index.html  index.json  namespaces.html  r481FADFC3FF0E489.html  r6108A0A44491D600.html  rA4E4947C1E1BD5E2.html  rAFD71DEB8AA9BAF8.html  rB5E7D255DBFD7AA4.html  rB9BFD7BBE6DAC3DC.html  rC3267FC00F9F1084.html  rC669911086F2F499.html  rDEE2760D41431FDD.html  records.html  search.html  (+2 more)
.github/workflows/: cmake-multi-platform.yml  pages.yml
bench/: bench.cpp
doc/: CMakeLists.txt  doc_docudb.md  standardese_entities.md  standardese_files.md
doctest/: tests.cpp
examples/docui/: CMakeLists.txt  docui.cpp
src/: docudb.cpp  docudb.hpp  sqlite_extensions.cpp  sqlite_extensions.h  version.h.in
test/: test.cpp
